--- a/examples/remap/index.html
+++ b/examples/remap/index.html
@@ -148,7 +148,7 @@
       mode: 'lock',
       selected: true,
       //actions: [L.DragAction, L.ScaleAction, L.DistortAction, L.RotateAction, L.FreeRotateAction, L.LockAction, L.OpacityAction, L.BorderAction, L.ExportAction, L.DeleteAction, L.RestoreAction],
-      //actions: [L.ScaleAction, L.RotateAction, L.OpacityAction, L.RestoreAction, L.LockAction],
+      actions: [L.ScaleAction, L.RotateAction, L.OpacityAction, L.RestoreAction, L.LockAction],
       corners: settings.corners,
     }).on('update', imageUpdated).on('load', updateMarkers)
 
