--- a/examples/remap/index.html
+++ b/examples/remap/index.html
@@ -274,7 +274,7 @@ function loadImages() {
     mode: 'lock',
     selected: true,
     //actions: [L.DragAction, L.ScaleAction, L.DistortAction, L.RotateAction, L.FreeRotateAction, L.LockAction, L.OpacityAction, L.BorderAction, L.ExportAction, L.DeleteAction, L.RestoreAction],
-    actions: [L.ScaleAction, L.RotateAction, L.OpacityAction, L.RestoreAction, L.LockAction],
+    actions: [L.ScaleAction, L.RotateAction, L.DistortAction, L.OpacityAction, L.RestoreAction, L.LockAction],
     corners: settings.remap.corners,
   }).on('update', imageUpdated).on('load', updateMarkers)
 
